@startuml

title __FOUREXAMPLE's Class Diagram__\n

  namespace com.twdt.netty {
    namespace fourexample {
      class com.twdt.netty.fourexample.MyHeartbeatServer {
          {static} + main()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace fourexample {
      class com.twdt.netty.fourexample.MyHeartbeatServerHandler {
          + userEventTriggered()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace fourexample {
      class com.twdt.netty.fourexample.MyHeartbeatServerInitializer {
          # initChannel()
      }
    }
  }
  

  com.twdt.netty.fourexample.MyHeartbeatServerHandler -up-|> io.netty.channel.ChannelInboundHandlerAdapter
  com.twdt.netty.fourexample.MyHeartbeatServerInitializer -up-|> io.netty.channel.ChannelInitializer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
